<resources>
    <string name="app_name">Sudoku</string>
    <string name="Infoo">𝐷𝑒𝑣𝑖 𝑟𝑖𝑒𝑚𝑝𝑖𝑟𝑒 𝑐𝑜𝑚𝑝𝑙𝑒𝑡𝑎𝑚𝑒𝑛𝑡𝑒 𝑙𝑎 𝑔𝑟𝑖𝑔𝑙𝑖𝑎 𝑐𝑜𝑛 𝑖 𝑛𝑢𝑚𝑒𝑟𝑖 𝑖𝑛 𝑚𝑜𝑑𝑜 𝑡𝑎𝑙𝑒 𝑐ℎ𝑒 𝑙𝑒 𝑐𝑜𝑙𝑜𝑛𝑛𝑒, 𝑟𝑖𝑔ℎ𝑒 𝑒 𝑏𝑙𝑜𝑐𝑐ℎ𝑖 𝟹𝑥𝟹 𝑐ℎ𝑒 𝑐𝑜𝑚𝑝𝑜𝑛𝑔𝑜𝑛𝑜 𝑙𝑎 𝑔𝑟𝑖𝑔𝑙𝑖𝑎 𝑐𝑜𝑛𝑡𝑒𝑛𝑔𝑎𝑛𝑜 𝑡𝑢𝑡𝑡𝑖 𝑖 𝑛𝑢𝑚𝑒𝑟𝑖 𝑑𝑎 𝟷 𝑎 𝟿.
        𝑆𝑡𝑎𝑖 𝑎𝑡𝑡𝑒𝑛𝑡𝑜! 𝑁𝑒𝑠𝑠𝑢𝑛 𝑛𝑢𝑚𝑒𝑟𝑜 𝑝𝑢𝑜̀ 𝑒𝑠𝑠𝑒𝑟𝑒 𝑝𝑟𝑒𝑠𝑒𝑛𝑡𝑒 𝑝𝑖𝑢̀ 𝑑𝑖 𝑢𝑛𝑎 𝑣𝑜𝑙𝑡𝑎 𝑖𝑛 𝑜𝑔𝑛𝑖 𝑐𝑜𝑙𝑜𝑛𝑛𝑎, 𝑟𝑖𝑔𝑎 𝑒 𝑏𝑙𝑜𝑐𝑐𝑜.</string>

    <string name="Inf">𝑰𝒍 𝑺𝒖𝒅𝒐𝒌𝒖 𝒂𝒓𝒓𝒊𝒗𝒂 𝒑𝒆𝒓 𝒍𝒂 𝒑𝒓𝒊𝒎𝒂     𝒗𝒐𝒍𝒕𝒂 𝒊𝒏 𝑮𝒊𝒂𝒑𝒑𝒐𝒏𝒆 𝒏𝒆𝒍 1984. 𝑸𝒖𝒆𝒔𝒕𝒐 𝒈𝒊𝒐𝒄𝒐  𝒖𝒏 𝒓𝒐𝒎𝒑𝒊𝒄𝒂𝒑𝒐     𝒃𝒂𝒔𝒂𝒕𝒐 𝒔𝒖𝒍𝒍𝒂 𝒍𝒐𝒈𝒊𝒄𝒂 𝒆 𝒔𝒖𝒊 𝒏𝒖𝒎𝒆𝒓𝒊. 𝑳𝒐 𝒔𝒄𝒐𝒑𝒐 𝒅𝒆𝒍 𝒈𝒊𝒐𝒄𝒐     𝒒𝒖𝒆𝒍𝒍𝒐 𝒅𝒊 𝒄𝒐𝒎𝒑𝒍𝒆𝒕𝒂𝒓𝒆 𝒍𝒐 𝒔𝒄𝒉𝒆𝒎𝒂 𝒄𝒍𝒂𝒔𝒔𝒊𝒄𝒐 (81 𝒄𝒂𝒔𝒆𝒍𝒍𝒆, 9 𝒃𝒍𝒐𝒄𝒄𝒉𝒊,     9 𝒓𝒊𝒈𝒉𝒆 𝒙 9 𝒄𝒐𝒍𝒐𝒏𝒏𝒆) 𝒊𝒏 𝒎𝒐𝒅𝒐 𝒄𝒉𝒆 𝒐𝒈𝒏𝒊 𝒄𝒐𝒍𝒐𝒏𝒏𝒂, 𝒐𝒈𝒏𝒊 𝒓𝒊𝒈𝒂 𝒆 𝒐𝒈𝒏𝒊     𝒃𝒍𝒐𝒄𝒄𝒐 𝒄𝒐𝒏𝒕𝒆𝒏𝒈𝒂 𝒕𝒖𝒕𝒕𝒊 𝒊𝒏 𝒏𝒖𝒎𝒆𝒓𝒊 𝒅𝒂 1 𝒂 9, 𝒏𝒆𝒔𝒔𝒖𝒏𝒐 𝒆𝒔𝒄𝒍𝒖𝒔𝒐 𝒆 𝒔𝒆𝒏𝒛𝒂     𝒓𝒊𝒑𝒆𝒕𝒊𝒛𝒊𝒐𝒏𝒊. 𝑨𝒍𝒄𝒖𝒏𝒊 𝒏𝒖𝒎𝒆𝒓𝒊 𝒔𝒐𝒏𝒐 𝒈𝒊 𝒄𝒐𝒏𝒕𝒆𝒏𝒖𝒕𝒊 𝒏𝒆𝒍𝒍𝒐 𝒔𝒄𝒉𝒆𝒎𝒂, 𝒊𝒏 𝒎𝒐𝒅𝒐 𝒅𝒂     𝒊𝒏𝒅𝒊𝒓𝒊𝒛𝒛𝒂𝒓𝒆 𝒍𝒂 𝒔𝒐𝒍𝒖𝒛𝒊𝒐𝒏𝒆. 𝑨𝒍 𝒕𝒆𝒓𝒎𝒊𝒏𝒆 𝒅𝒆𝒍𝒍𝒂 𝒑𝒂𝒓𝒕𝒊𝒕𝒂, 𝒗𝒊𝒆𝒏𝒆 𝒂𝒔𝒔𝒆𝒈𝒏𝒂𝒕𝒐 𝒖𝒏     𝒑𝒖𝒏𝒕𝒆𝒈𝒈𝒊𝒐, 𝒃𝒂𝒔𝒂𝒕𝒐 𝒔𝒖𝒍 𝒕𝒆𝒎𝒑𝒐 𝒊𝒎𝒑𝒊𝒆𝒈𝒂𝒕𝒐 𝒑𝒆𝒓 𝒓𝒊𝒔𝒐𝒍𝒗𝒆𝒓𝒆 𝒍𝒐 𝒔𝒄𝒉𝒆𝒎𝒂 𝒆 𝒔𝒖𝒍 𝒏𝒖𝒎𝒆𝒓𝒐 𝒅\'𝒊𝒏𝒅𝒊𝒛𝒊 𝒄𝒉𝒆 𝒗𝒆𝒏𝒈𝒐𝒏𝒐 𝒄𝒉𝒊𝒆𝒔𝒕𝒊. 𝑰𝒍 𝒑𝒖𝒏𝒕𝒆𝒈𝒈𝒊𝒐 𝒎𝒂𝒔𝒔𝒊𝒎𝒐  30.</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Nine">9</string>
    <string name="Eight">8</string>


    <string name="Run">🆁🆄🅽</string>
    <string name="Clear">🅲🅻🅴🅰🆁</string>
    <string name="sudokuname">ՏƲƊƠƘƲ</string>


</resources>